# fit-agent-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MCP_Project_Kickoff.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: LESSONS.md
evals/: conftest.py
evals/tier1_structural/: test_boundary_probe.py  test_schema_invariant.py
evals/tier2_stub/: test_graph_wiring.py
evals/tier3_live/: agent_runner.py  cases.yaml  harness.py  runner.py  test_harness.py  test_live.py
src/coach_agent/: __init__.py  cli.py  config.py  graph.py  mcp_client.py  stub_model.py
src/fitness_mcp/: __init__.py  __main__.py  audit.py  auth.py  cli.py  config.py  errors.py  issuer.py  repository.py  server.py
tests/: test_audit.py  test_auth.py  test_repository.py  test_tool_errors.py
