[project]
name = "fit-agent-mcp"
version = "0.1.0"
description = "Demo: health-data MCP server with per-user authorization + LangGraph coach agent (MCP host)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.10",
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-mcp-adapters>=0.1",
    "pyjwt>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[project.scripts]
fitness-mcp = "fitness_mcp.cli:main"
coach-agent = "coach_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fitness_mcp", "src/coach_agent"]

[tool.pytest.ini_options]
testpaths = ["evals", "tests"]
asyncio_mode = "auto"
markers = [
    "live: needs ANTHROPIC_API_KEY and a running server; never gates CI (tier 3)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "evals", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
